# pycrud

./: main.py  pyproject.toml
