[tool.poetry]
name = "pycrud"
version = "0.1.0"
description = ""
authors = ["wiremail <wiremail@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.110.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
motor = "^3.4.0"
pydantic = "^2.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
